[workspace]
members = ["./getcontact/", "./num_buster/"]

[profile.dev]
codegen-units = 1
incremental = false
lto = true
panic = "abort"

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = "z"
panic = "abort"