[package]
name = "getcontact"
version = "0.1.0-canary"
authors = ["Andrey Gulitsky <gulitsky@defuck.wtf>"]
edition = "2018"
homepage = "https://github.com/gulitsky/kto"
license-file = "LICENSE"
publish = false
readme = "README.md"
repository = "https://github.com/gulitsky/kto"
description = "Tool for getting information about phone numbers via Getcontact API."

[dependencies]
reqwest = "0.10.1"