[package]
name = "num_buster"
version = "0.1.0-canary"
authors = ["Andrey Gulitsky <gulitsky@defuck.wtf>"]
edition = "2018"
homepage = "https://github.com/gulitsky/kto"
license-file = "LICENSE"
publish = false
readme = "README.md"
repository = "https://github.com/gulitsky/kto"
description = "Tool for getting information about phone numbers via NumBuster! API."

[dependencies]
clap = "2.33.0"
clipboard = "0.5.0"
rand = "0.7.3"
regex = "1.3.4"
reqwest = { version = "0.10.1", features = ["gzip", "json", "socks"] }
url = "2.1.1"